1.添加电梯，微信朋友圈，登录页测试用例

--- a/学习笔记/测试用例设计.md
+++ b/学习笔记/测试用例设计.md
@@ -1,2 +1,167 @@
-#### 面试经典测试用例题目
-##### 电梯系统
+### 面试经典测试用例题目
+#### 电梯系统
+##### 一台电梯
+###### 1.功能测试
+> * 按钮功能 ①开门（运行中按开门键不开门） ②关门 ③电梯内按钮功能（电梯按键按下时点亮；按错楼层按钮取消）     
+> * 上升，下降（每层申请有效；正常停靠） 超载（忽略其他楼层的上行和下行申请；电梯的两边按钮可用）  
+> * 电梯内电话可用   
+> * 电梯内是否有灯，灯光是否柔和，电梯运行中灯是否稳定
+
+###### 2.性能测试
+> * 反应时间
+> * 关门时间    
+> * 速度（人体不适）
+
+###### 3.压力测试
+> * 超载 看电梯的最大承重量，在负载过重时报警装置是否有提醒
+> * 电梯壁碰撞
+> * 在一定时间内不断让电梯上升、下降
+
+###### 4.安全测试
+> * 进入电梯喊话，外面可听到
+> * 进入电梯拨打手机有信号
+> * 停电（不会坠落；电梯门可通过外力打开；紧急电话可用）
+> * 报警装置（超载）
+> * 通风状况
+> * 停靠位置
+> * 门有障碍阻碍（不会强制关门，停在当前楼层）
+> * 监控装置
+
+###### 5.UI 测试
+> * 标识的称重和人数
+> * 仅提供可到达楼层的按钮
+> * 美观程度；光滑度；形状
+> * 查看电梯外观，按键数字清晰、开和关按钮设计的图标是否容易区分
+
+###### 6.可用性及稳定性
+> * 按键高度    
+> * 操作方便
+> * 长时间运行 
+> * 升降过程中晃动是否明显
+> * 看电梯在最大负载下平稳运行的最长时间
+
+###### 7.需求测试
+> * 查看电梯的使用说明数，安全说明书等  
+
+###### 8.可靠性
+> * 同时按关门和开门按钮
+> * 同时按上下键、开关门按钮
+> * 多次选择同一楼层
+##### 两台电梯
+> * 联动前提，一部故障不影响另一部
+> * 2部均空闲状态，采取就近原则
+> * 有一部运行时，以同行方向且顺路电梯优先运行，否则安排空闲电梯  
+> * 2部均运行时，以方向同行且顺路的优先运行    
+> *  电梯在上行或下行时若满载，遇到有人等待电梯，是否停靠
+--- 
+##### 微信朋友圈
+###### 1.功能测试
+> * 朋友圈发送   
+只发送文本（长按相机图标） （假设文本长度上限为1-1500）：纯中文/纯数字/纯表情（软件+手机自带）/纯字符（html)/纯字母/混合模式/包含链接/文本是否支持复制粘贴     
+只发送文本（超出1500字符长度）   
+只发送文本（为空验证）     
+只发送图片：本地相册/相机拍摄/数量（允许1-9；超出9章张）/尺寸/图片格式（常见jpg、png；gif；不支持的图片格式）/大小/图片预览（点击图片，支持大屏预览；多张照片支持左右滑动预览）/增删改操作/为空验证    
+只发送视频：本地相册、拍摄/秒数限制（1-10秒；超出10秒)/视频个数（1个/大于1个）/视频格式/视频大小/增删改操作/为空验证  
+图片+视频   
+文字+视频   
+文字+图片   
+包含敏感信息，是否处理 
+所在位置：显示（自动定位/手动选择）  
+所在位置：不显示    
+所在位置：取消操作，返回上级  
+###### 2.界面/易用性测试
+> * 测试角度：页面布局是否与原设计效果图一致    
+> * 用户角度：页面布局是否美观，合理，操作是否简便，提示是否易于理解    
+> * 是否显示发朋友圈的昵称，图像和时间   
+####### 3.中断测试
+> * 核心功能    
+> * 实时数据交换
+> * 前后台切换   
+> * 网络异常    
+> * 低电量，断电  
+> * app切换   
+> * 手机故障    
+> * 来电/短信
+####### 4.性能测试  
+> * 服务器： loadrunner/jemeter工具/响应时间，内存，发送成功耗时    
+> * 客户端：运行所占内存  
+> * 压力测试：频繁浏览是否易崩溃/频繁点击朋友圈是否卡顿  
+####### 5.安全测试
+> * 发送内容是否合理
+####### 6.兼容性测试 
+> * 不同机型    
+> * 不同版本
+##### 7.网络测试
+> * wifi/热点/4G/不同运营商网络测试/无网测试（缓存在本地是否支持预览）/弱网测试（延时：响应时间是否接受/超时请求，是否有合理提示/是否区分超时时长；丢包：超时重发/发送不成功，是否保存为草稿）    
+---
+#### 登录页
+##### 1.界面测试
+> * 界面的设计风格是否与UI设计风格一致  
+> * 界面中的文字简洁易懂  
+> * 界面中没有错别字    
+##### 2.功能测试
+> * 输入已注册的用户名和正确的密码，验证是否成功登录    
+> * 输入已注册的用户名和不正确的密码，验证是否成功失败，且提示信息正确   
+> * 输入未注册的用户名和任意密码，验证是否登录失败，且提示信息正确 
+> * 使用未激活账户登录，验证是否登录失败  
+> * 使用被停用用户登录，验证是否登录失败  
+> * 用户名和密码两者都为空，验证是否登录失败，且提示信息正确    
+> * 用户名和密码两者之一为空，验证是否登录失败，且提示信息正确   
+> * 启用验证码前提，用户名和密码正确情况，输入正确的验证码，验证是否登录成功    
+> * 启用验证码前提，用户名和密码正确情况，输入错误的验证码，验证是否登录失败，且提示信息正确    
+> * 用户名和密码是否大小写敏感   
+> * 页面上的密码框是否加密显示、或者是否需要有明暗码切换按钮    
+> * 后台系统创建的用户第一次登录成功时，是否提示修改密码  
+> * 忘记用户名和忘记密码的功能是否可用   
+> * 前端页面是否根据设计需求限制用户名和密码长度  
+> * 如果登录功能需要验证码，点击验证码图片或者点击换一张是否可以更换验证码，更换后的验证码是否可用
+> * 刷新页面是否会刷新验证码    
+> * 如果验证码有时效性，需要分别时效性内和时效性外验证码的有效性  
+> * 用户登录成功但是会话超时后，继续操作是否会重定向到用户登录界面 
+> * 不同级别的用户，比如管理员和普通用户，登录系统后权限是否正确  
+> * 快捷键Tab和Enter等，是否可以正常使用
+> * 为空和输入空格字符串的校验是否一致
+> * 使用中文键盘输入字母和使用英文键盘输入字母传入后端的字符长度是否一致
+> * 成功登录后的session的时效设置
+> * 输入栏是否设置快速删除按钮
+> * 用户名和密码是否支持特殊字符和中文
+> * 浏览器的前进后退按钮，是否有效
+> * 成功登出后，点击浏览器回退按钮，是否可以继续操作系统
+> * 需求中是否有登录时间限制，如果有验证时间限制是否有效
+> * 验证不同登录方式的正确性：扫码、账号密码、第三方……
+> * 若支持手机号+验证码登录，验证码是否有时间限制，移动设备是否可以直接获取验证码
+> * 操作错误提示信息是否简单明了
+##### 3.兼容性测试   
+> * 不同浏览器下，验证登录页面的显示以及功能正确性
+> * 相同浏览器的不同版本下验证登录页面的显示以及功能正确性
+> * 不同移动设备终端的不同浏览器下，验证登录页面显示以及功能的正确性
+> * 不同分辨率的界面下，验证登录页面的显示以及功能正确性
+##### 4.安全性测试
+> * 用户密码后台存储是否加密
+> * 用户密码在网络传输过程中是否加密
+> * 密码是否具有有效期，密码有效期到期后，是否提示需要修改密码
+> * 不登录的情况下，在浏览器中直接输入登录后的URL地址,验证是否会重新定向到用户登录界面
+> * 密码输入框是否不支持复制粘贴
+> * 密码输入框内输入的密码是否都可以在页面源码模式下被查看
+> * 用户名和密码输入框分别输入典型的“SQL注入攻击”字符串，验证系统的返回页面
+> * 用户名和密码输入框分别输入典型的“XSS跨站脚本攻击”字符串，验证系统行为是否被篡改
+> * 连续多次登录失败的情况下，系统是否会阻止后续的尝试以应对暴力破解
+> * 同一用户在同一终端的多种浏览器上登录，验证登录功能的互斥性是否符合设计预期
+> * 同一用户先后在多台终端的浏览器上登录，验证登录是否具有互斥性
+> * 是否可以记住密码，记住的密码保存是否加密，记住的密码是否有有效期，过了有效期后是否清空密码
+> * 是否支持第三方登录
+> * 密码的强弱性，复杂度校验
+> * 异地登录校验、更换设备登录校验、登陆信息异常是否考虑账户冻结停用、是否允许第三方平台存储密码
+> * 是否可以使用登录的api发送登录请求，并绕开验证码校验
+> * 是否可以用抓包工具抓到的请求包直接登录
+> * 截取到的token等信息，是否可以在其他终端上直接使用，绕开登录，token过期时间校验
+> * 登录错误后的提示是否存在安全隐患
+##### 5.性能测试
+> * 单用户登录的响应时间是否小于3秒
+> * 单用户登录时，后台请求数量是否过多
+> * 高并发场景下用户登录的响应时间是否小于5秒
+> * 高并发场景下服务端的监控指标是否符合预期
+> * 高集合点并发场景下，是否存在资源死锁和不合理资源等待
+> * 长时间大量用户连续登录和登出，服务器是否存在内存泄露
+> * 输入内容校验是否加入了函数防抖
+
