--- a/学习笔记/代码格式笔记.md
+++ b/学习笔记/代码格式笔记.md
@@ -43,3 +43,6 @@ class ClassName:
 > * `print_employee_paychecks()`
 
 ##### 关于_ __ __init__等区别！！！！！！！！！！！
+> * `__init__`构造器，当一个实例被创建时调用的初始化方法 
+> * `__del__`析构器，当一个实例被销毁时调用的方法 
+> * `__call__`允许一个类的实例像函数一样被调用
