msg:整理公司招聘要求

--- a/学习笔记/简历.md
+++ b/学习笔记/简历.md
@@ -1,7 +1,53 @@
-工作经历
-2018.12-至今 知筑平台管理系统
-· 大后台及后台任务管理及设备管理，平台各管理员任务管理，学员预约任务等操作  
-· 负责处理任务，设备管理信息，以及平台端各用户信息，对完成后的项目进行测试，优化   
-· 运用MySQL进行前后台连接，实现对系统用户信息的添加，查询，修改，查询等（写了mysql,需要复习增删改查语句，删除的多种方式，倒序正序排列语句等！！！！） 
-· 使用postman进行接口测试，实现（写了postman，需要复习postman的操作，以及http协议，以及post,get等一系列知识！！！！）
+###工作经历
+#### 2018.12-至今 知筑平台管理系统
+> · 大后台及后台任务管理及设备管理，平台各管理员任务管理，学员预约任务等操作  
+>· 负责处理任务，设备管理信息，以及平台端各用户信息，对完成后的项目进行测试，优化   
+>· 运用MySQL进行前后台连接，实现对系统用户信息的添加，查询，修改，查询等（写了mysql,需要复习增删改查语句，删除的多种方式，倒序正序排列语句等！！！！） 
+>· 使用postman进行接口测试，实现（写了postman，需要复习postman的操作，以及http协议，以及post,get等一系列知识！！！！）
 
+## 华为招聘要求
+> 1、熟悉计算机、操作系统、网络、编程等基本原理，熟悉X86架构架构者优先；
+> 2、熟练掌握C或C++编程语言,熟悉嵌入式Linux编程环境；
+> 3、掌握基本的软件测试理论，熟悉软件测试的基本方法、流程和规范。
+> 4、熟悉使用linux、C/C++、python等一种及以上编程语言，有自动化架构和自动化工具开发经验者优先；
+> 5、具备ARM、X86 Linux开发/测试经验，熟悉网络交换或管理软件测试优先；
+> 6、熟悉测试方案设计和常用黑白盒测试设计方法，具备独立完成过软件测试设计工作能力
+#### 工作职责：
+> 1、主导或独立负责面向智能终端、Cloud、平安城市、自动驾驶等场景的安全威胁分析与硬件安全解决方案设计，包含TEE、安全启动、安全驱动、安全存储、密钥管理、安全通信等特性；
+2、主导或独立负责基于ARM芯片的安全SDK测试需求分析、测试方案设计、自动化测试框架开发与测试执行等；
+3、负责测试能力构建，研究或引进先进的测试方法、测试工具、测试技术，提升测试效率。
+任职要求：
+业务技能要求：
+1、具备嵌入式软件、系统软件、大规模FPGA/ASIC、软硬件协同系统的测试能力，能够根据系统应用场景及需求输出测试方案、自动化测试框架、测试用例；
+2、具备复杂测试场景的问题定界和定位能力；
+3、精通C/C++编程语言，熟练掌握Makefile、精通一种及以上跨平台脚本语言（包括但不限Python、Shell、Tcl、Perl），可以基于脚本语言开发高复杂度功能模块；
+4、良好的团队沟通和协同能力。
+专业知识要求：
+1、	精通软件或逻辑测试的基础理论、流程方法、工具和自动化方法等； 
+2、	熟悉操作系统原理，能基于Linux环境进行软件开发、调试，或至少熟悉Linux\Windows\Android里的一种； 
+3、	掌握常见的加密算法及其分类，了解不同类别之间的差异。
+
+### 京北方
+> 1.负责银行项目的web测试；
+2.对项目进行自动化测试，功能测试，接口测试
+1.测试的软件类型：应用软件
+2.软件的运行平台：PC、手机
+3.需要熟悉的系统开发环境：Windows	、Linux	
+4.岗位工作偏向：自动化测试	
+5.需要使用的测试/缺陷管理工具：Jira	、Jmetr	、禅道	
+6.常用的编程语言：JAVA	、JS（JavaScript）	、SQL	
+7.常用的数据库：MySQL	、ORACLE	
+8.承担项目管理工作：不需要	
+9.软件面向的用户量级：百万用户以上	
+
+### 阿里巴巴
+> 职位描述 
+1.参与评审产品设计架构,提早发现设计,架构的质量风险或技术风险,并提出建议方案解决问题,规避风险;
+2.结合业务线需求,主导或推动新的架构,设计,测试方法,理念,提升产品质量;
+3.开发适合业务线特点的自动化框架平台,在团队内部推广工程化方法,提升测试效率,缩短交付周期,支持业务的快速迭代上线。
+职位要求 
+1.计算机,软件工程相关专业本科及以上学历,具有2年及以上测试开发,测试架构,质量保障工作经验;
+2.精通Java或C++,可独立完成测试框架平台的开发,熟悉脚本语言,如python,perlshell;
+3.精通性能,稳定性,可靠性等专项测试,及架构风险把控,有较强的业务&技术架构分析设计能力,测试框架研发和方案整合能力；
+4.精通主流自动化测试工具及框架,有无线客户端经验者或电影行业业务经验者优先;
+5.具有较强的业务分析,沟通表达能力和综合协调能力,工作积极主动,责任心强
