msg:整理多家公司招聘要求

--- a/学习笔记/简历.md
+++ b/学习笔记/简历.md
@@ -51,3 +51,77 @@
 3.精通性能,稳定性,可靠性等专项测试,及架构风险把控,有较强的业务&技术架构分析设计能力,测试框架研发和方案整合能力；
 4.精通主流自动化测试工具及框架,有无线客户端经验者或电影行业业务经验者优先;
 5.具有较强的业务分析,沟通表达能力和综合协调能力,工作积极主动,责任心强
+
+### 深大智能科技
+> 岗位职责：
+1. 能编写简单的测试计划、测试用例，对bug进行跟踪与管理；
+2. 会WORD、EXCEL，能够根据要求编写软件说明书等常用文档；
+3. 对测试过程中发现的问题进行跟踪分析和报告，推动发现的问题及时合理的解决；
+4. 通过对产品的测试，保证产品质量达到指定质量目标，能提出对产品质量目标的进一步改进的要求并依照执行。
+岗位要求：
+1. 计算机相关专业专科以上学历，3年以上测试工作经验；
+2. 热爱软件测试，了解软件测试原理和方法；
+3. 熟悉黑盒测试；
+4. 了解Oracle/sql server数据库；
+5. 了解BUG管理工具，例如：QC、禅道等中的一种；
+6. 有相关行业（IC卡、售票系统、停车场系统、门禁系统）经验者优先。
+7. 性格活泼，思维敏捷，做事主动，具有良好的人际沟通和组织协调能力；
+8. 熟悉性能测试工具LOADRUNNER，自动化工具QTP的优先考虑。
+微信分享
+
+### 蚂蚁金服
+> 职位描述
+1. 熟悉测试用例设计，有接口测试、白盒测试经验；
+2. 熟悉Linux操作系统；对软件工程和大型软件架构有较深刻的认识；
+3. 熟悉Java语言，了解常用的java开发框架，精通至少一种脚本语言， 如：shell、php、perl、ruby等；
+4. 良好的沟通技能，团队合作能力；
+5. 有金融产品测试经验者优先。
+
+### 涂鸦智能
+> 1.负责嵌入式固件、客户项目测试，保障产品质量；
+2.参与需求评审，编写测试用例，跟进项目进度；
+3.使用自动化测试工具，维护自动化测试脚本；
+4.能够和其它员工相互帮助相互配合，记录测试缺陷与问题跟踪；
+职位要求：
+1.电子、自动化、物联网相关专业
+2.掌握测试理论基础，精通测试的流程、方法，逻辑思维缜密，有较强的学习能力；
+3.了解硬件设计和嵌入式软件设计相关知识，了解TCP/UDP协议，http协议；
+4.对智能家居熟悉，如：WiFi产品、蓝牙产品、zigbee产品、GPRS产品等其中之一即可，有IPC测试经验者优先；
+5.能熟练使用jmeter，wireshark，omnipeek，charles等工具，具备自动化测试经验；
+6.很强的责任心，良好的沟通能力和表达能力，能承受一定的工作压力
+1、经验不限，具体看能力；
+2、掌握软件研发模式、测试理论、测试流程、规范、测试方法；对测试工作有较深刻理解；
+3、掌握任一常用测试管理工具的使用，如Charles、GIT、JIRA、TestLink等；
+4、很强的责任心，良好的沟通能力和表达能力，能承受一定的工作压力；
+5、具备较强的学习能力和逻辑分析能力，对新技术感兴趣，有钻研和开拓精神；
+6、熟悉C/C++/Java/Python等至少一种编程语言，有Shell或Ruby/PHP/Python等使用经验者优先；
+7、理解常见的自动化工具，掌握任一常用自动化测试框架或工具，有实际项目测试应用者优先；
+8、在以下测试领域比如性能、安全、白盒、黑盒、自动化等有很强的专业技能者优先。
+9、有实际测试项目管理相关经验，能负责整个产品的优先；
+10、有智能家居产品使用测试经验者优先；
+
+### 有赞
+> 岗位职责
+- 完成有赞零售IOS/Android客户端与服务端的日常测试工作，可以负责无线端产品的专项测试；
+- 负责后台JAVA接口自动化脚本的编写，参与App UI自动化框架的设计与开发；
+- 能够分析项目存在的问题，制定解决方案，不断提升测试效率和质量；
+- 把握整个产品开发过程,降低上线风险,保证产品的正常运行；
+- 工科、计算机或其他相关专业本科以上学历；
+- 具有较强的业务分析能力，较好的沟通表达和综合协调能力；
+- 熟悉Java,C++,Python,PHP中任一语言；
+- 熟悉IOS或Android系统，了解其架构原理；
+- 有过测试框架开发、测试平台开发相关经验的优先；
+- 熟悉质量体系，如cmmi、scrum，有过程改进经验的优先。
+公司介绍
+
+### 蘑菇街
+> 职位描述:
+1.全面把握产品的功能及非功能需求，设计有效的测试策略； 提供有效功能测试设计和用例, 开发自动化测试用例脚本并执行； 
+2.研究新的测试技术、测试工具，并将新的测试技术和工具运用到实际测试保障活动中，提高测试的效率及其质量，最终提高整体产品质量； 
+3.规划和设计符合产品特点的测试平台，优化产品研发测试过程；
+职位要求:
+1.计算机、软件工程相关专业本科及以上学历，具有5年及以上系统测试、测试开发及质量保证相关工作； 
+2.精通Java，可独立完成测试工具的开发，熟悉脚本语言，如Python，Perl或Shell； 
+3.精通各种软件研发流程，测试流程及其质量保障体系和方法论； 
+4.精通常用测试工具及其平台，熟悉常用开源测试工具及其底层原理； 
+5.具有较强的业务分析，沟通表达能力和综合协调能力，工作积极主动，责任心强。
