--- a/学习笔记/学习进度计划.md
+++ b/学习笔记/学习进度计划.md
@@ -2,7 +2,10 @@
 > 1.前端 HTML   进度50%     
 > 2.FLASK 学习 进度1% 搭建环境失败，暂停学习
 ###2019-7-11
-> 1.python cookbook高阶知识学习 目标三天 今日需完成30% 
-> 2.
+> 1.python cookbook高阶知识学习 目标三天 今日需完成30%   未完成，重新细致定计划
+> 
+### 2019-7-18
+> 1.python cookbook高阶知识学习 今日完成1.5-1.10小节  今日已完成1.18小节
+
 
 
