msg:学习进度计划

--- a/学习笔记/学习进度计划.md
+++ b/学习笔记/学习进度计划.md
@@ -7,5 +7,7 @@
 ### 2019-7-18
 > 1.python cookbook高阶知识学习 今日完成1.5-1.10小节  今日已完成1.18小节
 
+### 2019-7-19
+> 1.python cookbook高阶知识学习 今日计划1-19至2-10小节  
 
 
